// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CtaButton Internal renders correctly 1`] = `
<button
  className="css-12unjc5"
>
  Click Me
</button>
`;

exports[`CtaButton Inverted renders correctly 1`] = `
<button
  className="css-1stx2ln"
>
  Click Me
</button>
`;

exports[`CtaButton renders correctly 1`] = `
<button
  className="css-12unjc5"
>
  Click Me
</button>
`;
